[gd_scene load_steps=5 format=3 uid="uid://bfur1yeblr585"]

[ext_resource type="Script" path="res://main.gd" id="1_2bq0o"]
[ext_resource type="PackedScene" uid="uid://bii0ryidhirca" path="res://player.tscn" id="1_mfvrx"]
[ext_resource type="PackedScene" uid="uid://ctvkptw0vvbdp" path="res://grass.tscn" id="2_ul7x4"]
[ext_resource type="PackedScene" uid="uid://dmj1ef7dscsww" path="res://HUD.tscn" id="3_3iran"]

[node name="Main" type="Node"]
script = ExtResource("1_2bq0o")

[node name="Terrain" parent="." instance=ExtResource("2_ul7x4")]
position = Vector2(723, 634)

[node name="HUD" parent="." instance=ExtResource("3_3iran")]

[node name="Player" parent="." instance=ExtResource("1_mfvrx")]
position = Vector2(1041, 719)

[node name="Player2" parent="." instance=ExtResource("1_mfvrx")]
position = Vector2(1459, 724)

[connection signal="take_damage" from="Player" to="." method="_on_player_take_damage"]
[connection signal="take_damage" from="Player2" to="." method="_on_player_2_take_damage"]
